Addressing review comment